--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,18 @@
 * {
-  margin: 0px;
-  padding: 0px;
+
   box-sizing: border-box;
   font-family: "Josefin Sans";
-  text-align: center;
+
 }
 
 #name {
   margin-top: 35px;
+    text-align: center;
+}
+
+.outer {
+  margin-top: 35px;
+  display: flex;
+  gap: 25px;
+  margin-left: 100px;
 }
